font & base structure

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,10 @@
-body{
-    background-color: red;
-}
+// Utils
+// -----------------------------------------------------------------------------
+@import 'utils/variables';
+@import 'utils/utilities';
+@import 'utils/reset';
+@import 'utils/typography';
+@import 'utils/base';
+
+// Global
+// -----------------------------------------------------------------------------
