reorganize scss structure

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,25 @@
 // Utils
 // -----------------------------------------------------------------------------
+@import 'utils/font-face';
 @import 'utils/variables';
 @import 'utils/utilities';
 @import 'utils/reset';
 @import 'utils/typography';
 @import 'utils/base';
 
-// Global
+// Atoms
 // -----------------------------------------------------------------------------
+
+
+
+// Molecules
+// -----------------------------------------------------------------------------
+@import './molecules/button';
+@import './molecules/dark-mode-toggle';
+@import './molecules/language-switcher';
+
+
+
+// Organisms
+// -----------------------------------------------------------------------------
+@import './organisms/navigation';
