--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -1,5 +1,11 @@
-
+h1 {
+    @include font(extra-bold);
+    font-size: 40px;
+    line-height: calc(60/40);
+}
 
 p {
-    @include font(thin);
+    @include font(regular);
+    font-size: 16px;
+    line-height: calc(16/24);
 }
