--- a/src/scss/molecules/_dark-mode-toggle.scss
+++ b/src/scss/molecules/_dark-mode-toggle.scss
@@ -8,6 +8,22 @@
     background-color: rgba($color-light-mode-primary, .7);
     backdrop-filter: blur(20px);
     border-radius: 10px;
+    transition: $animation-colors-short, $animation-translations-short;
+
+    &:focus,
+    &:focus-visible,
+    &:hover {
+        outline: none;
+        outline-offset: 0;
+        text-decoration: none;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        transform: scale(1.05);
+        outline: none;
+    }
+
+    &:active {
+        transform: scale(.9);
+    }
 
     &__icon {
         display: flex;
