--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 // -----------------------------------------------------------------------------
 @import './atoms/button';
 @import './atoms/image';
+@import './atoms/icon';
 
 
 
