--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -1,12 +1,25 @@
+$image-overlap-mobile: 60px;
+$image-overlap-desktop: 40px;
+
+
 .header {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - $site-gutter-mobile);
     background-color: $color-light-mode-primary;
-    border-radius: 10px;
     overflow: hidden;
+    transition: background-color $timing-short ease-in-out, margin $timing-short ease-in-out, border-radius $timing-short ease-in-out;
+    
+    @include mq('m') {
+        border-radius: 10px;
+        margin: $site-gutter-desktop;
+        min-height: calc(100vh - $site-gutter-desktop - $site-gutter-desktop - $site-gutter-desktop);
+    }
 
     &__cover {
+        flex: 1;
         position: relative;
         width: 100%;
-        height: 400px;
         display: flex;
         justify-content: space-between;
         padding: 30px;
@@ -33,11 +46,106 @@
         }
     }
 
+    &__content {
+        margin: -$image-overlap-mobile 0 0;
+        padding: 0 $site-gutter-mobile $site-gutter-mobile;
+        transition: margin $timing-short ease-in-out;
+
+        @include mq('m') {
+            display: flex;
+            margin: -$image-overlap-desktop 0 0;
+        }
+
+        &__profile {
+            position: relative;
+            width: 170px;
+            height: min-content;
+
+            @include mq('m') {
+                width: 200px;
+            }
+
+            .image {
+                width: 100%;
+                border-radius: 50%;
+                overflow: hidden;
+                transition: $animation-size-short;
+            }
+            
+            &__icon {
+                position: absolute;
+                overflow: hidden;
+                background-color: $color-light-mode-primary;
+                border-radius: 50%;
+                right: 0;
+                bottom: 0;
+                transition: $animation-colors-short;
+                border: solid 4px $color-light-mode-primary;
+                
+                svg {
+                    width: 50px;
+                    height: 50px;
+                    transition: fill $timing-short ease-in-out;
+                }
+            }
+        }
+
+        &__text {
+            text-align: left;
+            flex: 1;
+            padding: $spacing-sm 0;
+            transition: $animation-translations-short;
+
+            @include mq('m') {
+                padding: calc(30px + $image-overlap-desktop) 0 0 35px;
+            }
+
+            p {
+                position: relative;
+                @include font('medium');
+                font-size: 20px;
+                line-height: 1;
+                height: 40px;
+                overflow: hidden;
+                
+                @include mq('m') {
+                    font-size: 26px;
+                }
+                
+                span {
+                    white-space: nowrap;
+                    display: flex;
+                    align-items: center;
+                    position: absolute;
+                    height: 100%;
+                    width: 100%;
+                    left: 0;
+                    top: 0;
+                }
+            }
+
+            .button {
+                margin-top: 13px;
+            }
+        }
+    }
+
     &.dark-mode {
         background-color: $color-dark-mode-primary;
 
         .header__cover {
 
+        }
+
+        .header__content {
+            &__profile__icon {
+                background-color: $color-dark-mode-primary;
+                border-color: $color-dark-mode-primary;
+                
+                svg {
+                    fill: $color-dark-mode-secondary;
+                }
+            }
         }
     }
 }
