--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -30,11 +30,16 @@ $color-light-mode-tertiary: #8F00FF;
 
 $color-light-mode-bg: #EAEAEA;
 
+$color-light-mode-grey: #909090;
 $color-light-mode-grey-dark: #272727;
 $color-light-mode-grey-darker: #1E1E1E;
 
 $color-light-mode-focus: #e2c012;
 
+$color-light-mode-link: #556AD3;
+$color-light-mode-link-hover: #344DCB;
+$color-light-mode-link-focus: #7E8EDE;
+$color-light-mode-link-active: #2B3FA6;
 
 $color-dark-mode-primary: #272727;
 $color-dark-mode-secondary: #FFFFFF;
