--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -11,5 +11,6 @@ h1 {
 p {
     @include font(regular);
     font-size: 16px;
-    line-height: calc(16/24);
+    line-height: 1.2;
+    text-align: left;
 }
