--- a/src/scss/atoms/_video.scss
+++ b/src/scss/atoms/_video.scss
@@ -15,6 +15,7 @@
         left: 12%;
         top: 5%;
         position: absolute;
-        object-fit: cover;
+        object-fit: fit;
+        background-color: black;
     }
 }
