--- a/src/scss/molecules/_project-card.scss
+++ b/src/scss/molecules/_project-card.scss
@@ -140,11 +140,14 @@ $catalog-height-mobile: 70px;
             margin-top: 30px;
 
             &__text,
-            &__img,
-            &__video {
+            &__img {
                 &:not(:first-child) {
                     margin: 50px 0;
                 }
+            }
+
+            &__video {
+                margin: 200px 0;
             }
 
             a {
