--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -26,13 +26,25 @@ $image-overlap-desktop: 40px;
         justify-content: space-between;
         padding: 30px;
         
-        img {
+        &__carousel {
             position: absolute;
-            top: 0;
-            left: 0;
+            inset: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+
+            &__motion {
+                position: absolute;
+                inset: 0;
+                width: 100%;
+                height: 100%;
+            }
+
+            .image {
+                position: absolute;
+                inset: 0;
+                width: 100%;
+                height: 100%;
+            }
         }
 
         &__btns {
