fix use scroll for catalog

--- a/src/scss/organisms/_projects.scss
+++ b/src/scss/organisms/_projects.scss
@@ -108,6 +108,7 @@
                     font-size: 20px;
                     color: $color-light-mode-secondary;
                     line-height: 1;
+                    text-align: center;
                 }
             }
 
