--- a/src/scss/atoms/_image.scss
+++ b/src/scss/atoms/_image.scss
@@ -24,7 +24,7 @@
             inset: 0;
             width: 100%;
             height: 100%;
-            backdrop-filter: blur(20px);
+            backdrop-filter: blur(30px);
             border-radius: inherit;
         }
 
@@ -36,7 +36,7 @@
             height: 100%;
             z-index: 1;
             border-radius: inherit;
-            animation: pulse 2.5s infinite;
+            animation: pulse 2s infinite ease-in-out;
         }
         
         @keyframes pulse {
@@ -45,7 +45,7 @@
             }
             
             50% {
-                background-color: rgba($color-light-mode-primary, .2);
+                background-color: rgba($color-light-mode-primary, .4);
             }
             
             100% {
