--- a/src/scss/molecules/_project-card.scss
+++ b/src/scss/molecules/_project-card.scss
@@ -63,6 +63,8 @@ $catalog-height-mobile: 70px;
 
     &__content {
         padding: $site-gutter-mobile;
+        min-height: 100%;
+
         
         @include mq('m') {
             display: flex;
@@ -138,6 +140,7 @@ $catalog-height-mobile: 70px;
 
         .project-content {
             margin-top: 30px;
+            width: 100%;
 
             &__text,
             &__img {
@@ -147,7 +150,7 @@ $catalog-height-mobile: 70px;
             }
 
             &__video {
-                margin: 200px 0;
+                margin: 100px 0;
             }
 
             a {
