--- a/src/scss/molecules/_project-card.scss
+++ b/src/scss/molecules/_project-card.scss
@@ -91,7 +91,7 @@ $catalog-height-mobile: 70px;
             &__jobs {
                 display: flex;
                 flex-direction: column;
-                align-items: start;
+                align-items: flex-start;
                 margin-top: 20px;
 
                 p {
@@ -104,7 +104,7 @@ $catalog-height-mobile: 70px;
             &__tools {
                 display: flex;
                 flex-direction: column;
-                align-items: start;
+                align-items: flx-start;
                 margin-top: 30px;
 
                 li {
