--- a/src/scss/molecules/_project-card.scss
+++ b/src/scss/molecules/_project-card.scss
@@ -172,6 +172,27 @@ $catalog-height-mobile: 70px;
                     outline: none;
                 }
             }
+
+            ul {
+                padding: 5px;
+
+                li {
+                    margin-left: 15px;
+                    margin-bottom: 4px;
+                    list-style: none;
+                    display: flex;
+                    align-items: center;
+
+                    &::before {
+                        content: '\2022';
+                        color: $color-light-mode-tertiary;
+                        width: 1em;
+                        font-size: 20px;
+                        font-weight: bold;
+                        margin-left: -1em;
+                    }
+                }
+            }
         }
     }
 
