--- a/src/scss/molecules/_project-card.scss
+++ b/src/scss/molecules/_project-card.scss
@@ -59,6 +59,48 @@ $catalog-height-mobile: 70px;
             color: $color-light-mode-primary;
             text-shadow: 1px 1px 2px $color-light-mode-secondary;
         }
+
+        &__scroll-down {
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 30px;
+            height: 60px;
+            border: 3px solid $color-light-mode-primary ;
+            border-radius: 15px;
+
+            
+            &::before {
+                content: '';
+                position: absolute;
+                inset: 4px 0 34px 4px;
+                width: 16px;
+                border-radius: 8px;
+                background-color: $color-light-mode-primary;
+                animation: scroller 1500ms ease-out infinite;
+            }
+        }
+
+        @keyframes scroller{
+            0%{
+              bottom: 34px;
+            }
+            5%{
+              top: 4px;
+            }
+            32%{    
+              bottom: 4px;
+            }
+            66%{
+              top: 34px;
+              bottom: 4px;
+            }
+            100%{
+              top: 4px;
+              bottom: 34px;
+            }
+          }
     }
 
     &__content {
