--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -1,3 +1,7 @@
+$profile-picture-width-smartphone: 170px;
+$profile-picture-width-tablet: 200px;
+$profile-picture-width-desktop: 230px;
+
 $image-overlap-mobile: 60px;
 $image-overlap-desktop: 40px;
 
@@ -5,27 +9,28 @@ $image-overlap-desktop: 40px;
 .header {
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - $site-gutter-mobile);
-    background-color: $color-light-mode-primary;
-    overflow: hidden;
     transition: background-color $timing-short ease-in-out, margin $timing-short ease-in-out, border-radius $timing-short ease-in-out;
+    background-color: $color-light-mode-primary;
     
     @include mq('m') {
-        border-radius: 10px;
+        background-color: transparent;
         margin: $site-gutter-desktop;
-        min-height: unset;
-        height: calc(100vh - $site-gutter-desktop - $site-gutter-desktop - $site-gutter-desktop);
-        max-height: calc(900px);
     }
-
+    
     &__cover {
-        flex: 1;
         position: relative;
         width: 100%;
+        height: 250px;
         display: flex;
         justify-content: space-between;
-        padding: 30px;
-
+        padding: $spacing-lg;
+        
+        @include mq('m') {
+            border-radius: 10px;
+            overflow: hidden;
+            height: 500px;
+        }
+        
         &__darkmode-toggle,
         &__language-toggle {
             z-index: 2;
@@ -36,14 +41,15 @@ $image-overlap-desktop: 40px;
             inset: 0;
             width: 100%;
             height: 100%;
-
+            overflow: hidden;
+            
             &__motion {
                 position: absolute;
                 inset: 0;
                 width: 100%;
                 height: 100%;
             }
-
+            
             .image {
                 position: absolute;
                 inset: 0;
@@ -51,41 +57,65 @@ $image-overlap-desktop: 40px;
                 height: 100%;
             }
         }
-
+        
         &__btns {
             z-index: 3;
             position: absolute;
-            bottom: 30px;
-            right: 30px;
+            bottom: $spacing-lg;
+            right: $spacing-lg;
             display: flex;
+            transition: bottom .3s ease-in-out;
+            
+            @include mq('m') {
+                bottom: calc($profile-picture-width-desktop / 1.2);
+            }
 
+            @include mq('xl') {
+                bottom: $spacing-lg;
+            }
+            
             button {
                 width: 40px;
                 margin-left: 3px;
             }
         }
     }
-
+    
     &__content {
         margin: -$image-overlap-mobile 0 0;
         padding: 0 $site-gutter-mobile $site-gutter-mobile;
         transition: margin $timing-short ease-in-out;
         z-index: 2;
-
+        
         @include mq('m') {
             display: flex;
-            margin: -$image-overlap-desktop 0 0;
+            margin: calc($profile-picture-width-tablet / -1.2) 0 0;
+            padding: 0;
+            width: calc(100% - $spacing-lg);
+            position: relative;
         }
-
+        
+        @include mq('l') {
+            margin: calc($profile-picture-width-desktop / -1.2) 0 0;
+        }
+        
         &__profile {
             position: relative;
-            width: 170px;
+            width: $profile-picture-width-smartphone;
             height: min-content;
-
+            
             @include mq('m') {
-                width: 200px;
+                position: absolute;
+                z-index: 2;
+                left: $spacing-lg;
+                top: 0;
+                width: $profile-picture-width-tablet;
             }
-
+            
+            @include mq('l') {
+                width: $profile-picture-width-desktop;
+            }
+            
             .image {
                 width: 100%;
                 border-radius: 50%;
@@ -95,13 +125,13 @@ $image-overlap-desktop: 40px;
             
             &__icon {
                 position: absolute;
-                overflow: hidden;
-                background-color: $color-light-mode-primary;
-                border-radius: 50%;
                 right: 0;
                 bottom: 0;
-                transition: $animation-colors-short;
+                overflow: hidden;
+                background-color: $color-light-mode-primary;
                 border: solid 4px $color-light-mode-primary;
+                border-radius: 50%;
+                transition: $animation-colors-short;
                 
                 svg {
                     width: 50px;
@@ -110,52 +140,115 @@ $image-overlap-desktop: 40px;
                 }
             }
         }
-
+        
         &__text {
+            position: relative;
             text-align: left;
             flex: 1;
             padding: $spacing-sm 0;
-            transition: $animation-translations-short;
-
+            background-color: transparent;
+            transition:
+                background-color $timing-short ease-in-out,
+                $animation-translations-short
+            ;
+            
             @include mq('m') {
-                padding: calc(30px + $image-overlap-desktop) 0 0 35px;
+                margin: $spacing-lg 0 0 calc(($profile-picture-width-tablet / 2) + $spacing-lg);
+                padding: $spacing-lg 0 $spacing-lg calc( ($profile-picture-width-tablet / 2) + $spacing-lg );
+                min-height: $profile-picture-width-tablet;
+                background-color: $color-light-mode-primary;
+                border-radius: 10px;
+                overflow: hidden;
+            }
+            
+            @include mq('l') {
+                padding: $spacing-lg 0 $spacing-lg calc( ($profile-picture-width-desktop / 2) + $spacing-lg );
+                max-width: 800px
             }
 
-            p {
-                position: relative;
-                @include font('medium');
+            &__greeting {
+                @include font(medium);
                 font-size: 20px;
-                line-height: 1;
-                height: 40px;
+
+                @include mq('m') {
+                    font-size: 23px;
+                }
+                
+                @include mq('l') {
+                    font-size: 26px;
+                }
+            }
+
+            &__name {
+                margin-top: 10px;
+                @include font(extrabold);
+                font-size: 30px;
+
+                @include mq('m') {
+                    font-size: 35px;
+                }
+
+                @include mq('l') {
+                    font-size: 40px;
+                }
+            }
+
+            &__subtitle {
+                @include font(medium);
+                margin-top: 20px;
+                font-size: 20px;
+                position: relative;
+                line-height: 1.2;
                 overflow: hidden;
+                display: flex;
+                align-items:flex-start;
                 
                 @include mq('m') {
+                    font-size: 23px;
+                }
+                
+                @include mq('l') {
                     font-size: 26px;
                 }
                 
-                span {
-                    white-space: nowrap;
-                    display: flex;
-                    align-items: center;
-                    position: absolute;
-                    height: 100%;
-                    width: 100%;
-                    left: 0;
-                    top: 0;
+                &__animate {
+                    position: relative;
+                    margin-left: 10px;
+                    height: 55px;
+                    flex: 1;
+
+                    @include mq('l') {
+                        height: 35px;
+                    }
+
+                    span {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        left: 0;
+                        top: 0;
+                    }
                 }
             }
 
-            .button {
-                margin-top: 13px;
+            &__contact {
+                margin-top: 25px;
+                display: flex;
+                
+                p {
+                    @include font(regular);
+                    font-size: 30px;
+                    margin-right: 30px;
+                }
             }
         }
     }
 
     &.dark-mode {
         background-color: $color-dark-mode-primary;
-
-        .header__cover {
-
+        
+        @include mq('m') {
+            background-color: transparent;
         }
 
         .header__content {
@@ -165,6 +258,11 @@ $image-overlap-desktop: 40px;
                 
                 svg {
                     fill: $color-dark-mode-secondary;
+                }
+            }
+            &__text {
+                @include mq('m') {
+                    background-color: $color-dark-mode-primary;
                 }
             }
         }
