--- a/src/scss/molecules/_language-toggle.scss
+++ b/src/scss/molecules/_language-toggle.scss
@@ -10,19 +10,22 @@
     border-radius: 10px;
     transition: $animation-colors-short, $animation-translations-short;
 
-    &:focus,
-    &:focus-visible,
     &:hover {
         outline: none;
-        outline-offset: 0;
         text-decoration: none;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transform: scale(1.05);
-        outline: none;
+    }
+    
+    &:focus,
+    &:focus-visible {
+        outline: 3px solid $color-light-mode-focus;
+        outline-offset: 1px;
     }
 
     &:active {
         transform: scale(.9);
+        outline: 0
     }
 
     &__lng {
