--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -34,7 +34,7 @@ $color-light-mode-grey: #909090;
 $color-light-mode-grey-dark: #272727;
 $color-light-mode-grey-darker: #1E1E1E;
 
-$color-light-mode-focus: #e2c012;
+$color-light-mode-focus: #ff9900;
 
 $color-light-mode-link: #556AD3;
 $color-light-mode-link-hover: #344DCB;
@@ -50,6 +50,8 @@ $color-dark-mode-bg-blur: rgba(255, 255, 255, 0.7);
 
 $color-dark-mode-grey-dark: #272727;
 $color-dark-mode-grey-darker: #1E1E1E;
+
+$color-dark-mode-focus: #e2c012;
 
 // Spacings
 $site-gutter-mobile: 24px;
